segundo intento de commit

--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
     <title>Arturo Alfaro</title>
 
     <script
-    src="https://code.jquery.com/jquery-3.7.1.min.js"
+    src="https://code.jquery.com/jquery-3git add .7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
     crossorigin="anonymous">
     </script>
 
-    <script> 
-        $(function(){
-            $("#header").load("header.html"); 
-            $("#footer").load("footer.html"); 
-        });
-    </script>
 </head>
 <body>
-    <div id="header"></div>
+    <header>
+        <div class="main-nav">
+            <ul>
+                <li class="nav-item"><a href="/">Home</a></li>
+                <li class="nav-item"><a href="education.html">Skills</a></li>
+                <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav-item"><a href="career.html">Career</a></li>
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </header>
 
    <div class="hero-section padded-row page-row">
     <div>
