--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,18 @@
                 <a class="nav-item nav-link " href="/index.html">Home</a>
                 <a class="nav-item nav-link" href="/career.html">Career</a>
                 <a class="nav-item nav-link" href="/portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link" href="/education.html">Educación</a>
+                <a class="nav-item nav-link" href="/education.html">Education</a>
                 <a class="nav-item nav-link active" href="/contact.html">Contact</a>
               </div>
             </div>
           </nav>
     </header>
     <main>
-
+        <div class="container sections-wrapper py-6">
+            <div class="row">
+                
+            </div>
+        </div>
     </main>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         
