--- a/education.html
+++ b/education.html
@@ -8,22 +8,36 @@
     <link rel="stylesheet" href="styles.css">
 </head>   
 <body class="container">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link " href="/index.html">Home</a>
-                <a class="nav-item nav-link" href="/career.html">Career</a>
-                <a class="nav-item nav-link" href="/portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link active" href="/education.html">Education</a>
-                <a class="nav-item nav-link " href="/contact.html">Contact</a>
-              </div>
-            </div>
-          </nav>
-    </header>
+  <header class="container">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <a class="navbar-brand" href="/">
+            <img src="/pics/logo-nobg.png" width="60" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item ">
+                <a class="nav-link" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/career.html">Career</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/education.html">Education</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul> 
+        </div>
+    </nav>
+</header>
     <main>
         <div class="container sections-wrapper py-6">
             <div class="row">
