--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <header class="container">
       <nav class="navbar navbar-expand-lg navbar-light fixed-top">
           <a class="navbar-brand" href="/">
-              <img src="/pics/logo-nobg.png" width="60" alt="">
+              <img src="pics/logo-nobg.png" width="60" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
