--- a/index.html
+++ b/index.html
@@ -182,10 +182,9 @@
     </div>
     </main>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        
-    
-        <ul class="nav col-md-12 justify-content-end list-unstyled d-flex">
-          <li class="ms-3">Take a look to some of my projects <a class="text-muted" href="https://github.com/ArthurAlphaW"><svg class="bi" width="24" height="24"><use xlink:href="#github"/></svg></a></li>
+        <ul class="nav col-md-12 justify-content-between list-unstyled d-flex">
+          <li class="ms-3">Let's get in touch <a class="text-muted" href="https://www.linkedin.com/in/arturo-alfaro-blanco-b09821a3/"><svg class="bi" width="24" height="24"><use xlink:href="#linkedin"/></svg></a></li>
+          <li class="ms-3">Take a look to some of my projects <a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#github"/></svg></a></li>
         </ul>
       </footer>
 
