--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/career.html">Career</a>
+                    <a class="nav-link" href="career.html">Career</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/education.html">Education</a>
+                    <a class="nav-link" href="education.html">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul> 
             </div>
