--- a/html/education.html
+++ b/html/education.html
@@ -6,7 +6,12 @@
     <meta name="description" content="Roadmap of the knwoledge that supports my experience">
     <title>Arturo Alfaro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    
+    <link rel="stylesheet" href="../css/styles.css"> 
 </head>   
 <body class="container">
   <header class="container">
@@ -21,19 +26,19 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="career.html">Career</a>
+                <a class="nav-link" href="html/career.html">Career</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-link" href="html/portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="education.html">Education</a>
+                <a class="nav-link" href="html/education.html">Education</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="html/contact.html">Contact</a>
             </li>
           </ul> 
         </div>
