header links fix and mobile nav fix

--- a/html/contact.html
+++ b/html/contact.html
@@ -29,16 +29,16 @@
                   <a class="nav-link" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="html/career.html">Career</a>
+                  <a class="nav-link" href="../html/career.html">Career</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="html/portfolio.html">Portfolio</a>
+                  <a class="nav-link" href="../html/portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="html/education.html">Education</a>
+                  <a class="nav-link" href="../html/education.html">Education</a>
               </li>
               <li class="nav-item active">
-                  <a class="nav-link" href="html/contact.html">Contact</a>
+                  <a class="nav-link" href="../html/contact.html">Contact</a>
               </li>
             </ul> 
           </div>
