--- a/html/career.html
+++ b/html/career.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arturo Alfaro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>   
 <body class="container">
   <header class="container">
@@ -20,19 +20,19 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="career.html">Career</a>
+                <a class="nav-link" href="../html/career.html">Career</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-link" href="../html/portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="education.html">Education</a>
+                <a class="nav-link" href="../html/education.html">Education</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="../html/contact.html">Contact</a>
             </li>
           </ul> 
         </div>
