--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>    
 <body class="container">  
     <header class="container">  
-        <nav class="navbar navbar-expand-md navbar-light sticky-top">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top">
             <a class="navbar-brand" href="/">
                 <img src="pics/logo-nobg.png" width="80" alt="Arturo Alfaro Web Developer">
             </a>
